samples/_failures_safe/1761326263_a8c085_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6de269d7.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_6de269d7.c:165:43: error: expected ‘)’ at end of input
  165 |             parser_parse_expression(parser
      |                                    ~      ^
      |                                           )
./samples/SAFE/__tmp_6de269d7.c:165:13: error: expected declaration or statement at end of input
  165 |             parser_parse_expression(parser
      |             ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6de269d7.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6de269d7.c:165:13: error: expected declaration or statement at end of input
